<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey0"
        android:paddingBottom="@dimen/_20sdp">

        <TextView
            android:id="@+id/heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            android:fontFamily="@font/basiercircle_medium"
            android:gravity="center"
            android:text="@string/reset_pass"
            android:textAllCaps="false"
            android:textColor="@color/navy"
            android:textSize="@dimen/_20ssp"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_22sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_marginEnd="@dimen/_22sdp"
            android:textColorHint="@color/colorBlackLighter"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="@dimen/_25sdp"
            app:boxCornerRadiusBottomStart="@dimen/_25sdp"
            app:boxCornerRadiusTopEnd="@dimen/_25sdp"
            app:boxCornerRadiusTopStart="@dimen/_25sdp"
            app:boxStrokeColor="@color/navy"
            app:boxStrokeWidth="0dp"
            app:endIconContentDescription="correct"
            app:endIconDrawable="@drawable/ic_icon_alert_valid"
            app:endIconMode="none"
            app:endIconTint="@color/dimGreen"
            app:errorIconDrawable="@drawable/ic_icon_alert_invalid"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/heading">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmailField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="null"
                android:fontFamily="@font/basiercircle_regular"
                android:hint="@string/hint_email_address"
                android:importantForAutofill="no"
                android:inputType="textNoSuggestions|textEmailAddress"
                android:paddingStart="@dimen/_20sdp"
                android:paddingTop="@dimen/_12sdp"
                android:paddingEnd="@dimen/_20sdp"
                android:paddingBottom="@dimen/_12sdp"
                android:textColor="@color/navy"
                android:textSize="@dimen/_10ssp" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/btnSendEmail"
            style="@style/unselected_theme"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_22sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_22sdp"
            android:enabled="false"
            android:fontFamily="@font/basiercircle_semibold"
            android:gravity="center"
            android:text="@string/label_send_email"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintTop_toBottomOf="@id/etEmail" />

        <TextView
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/basier_circle"
            android:gravity="center"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/steel"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintTop_toBottomOf="@id/btnSendEmail" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>