<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_20sdp">

        <EditText
            android:id="@+id/old_pass"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_margin="@dimen/_10sdp"
            android:fontFamily="@font/basier_circle"
            android:hint="@string/old_pass"
            android:inputType="textPassword"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/old_pass_hide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:src="@drawable/ic_pass_hide"
            app:layout_constraintBottom_toBottomOf="@id/old_pass"
            app:layout_constraintEnd_toEndOf="@id/old_pass"
            app:layout_constraintTop_toTopOf="@id/old_pass"
            app:tint="@color/Charcoal" />

        <EditText
            android:id="@+id/new_pass"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_margin="@dimen/_10sdp"
            android:fontFamily="@font/basier_circle"
            android:hint="@string/new_pass"
            android:inputType="textPassword"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/old_pass" />

        <ImageView
            android:id="@+id/new_pass_hide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:src="@drawable/ic_pass_hide"
            app:layout_constraintBottom_toBottomOf="@id/new_pass"
            app:layout_constraintEnd_toEndOf="@id/new_pass"
            app:layout_constraintTop_toTopOf="@id/new_pass"
            app:tint="@color/Charcoal" />

        <Button
            android:id="@+id/update_pass"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/bg_cta_button"
            android:backgroundTint="@color/color_application"
            android:fontFamily="@font/basier_circle"
            android:gravity="center"
            android:text="@string/update_pass"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toEndOf="@id/new_pass"
            app:layout_constraintStart_toStartOf="@id/new_pass"
            app:layout_constraintTop_toBottomOf="@id/new_pass" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>